[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bicausal"
version = "0.1.1"
description = "Bivariate Causal Discovery Toolbox. From the Thesis: Causal Discovery In Exchangeable Data, done at Instituto Superior Técnico, Universidade de Lisboa, Portugal."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tiago Brogueira", email = "tiago.brogueira@tecnico.ulisboa.pt" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/Tmcgjogos/bicausal"

[tool.hatch.build]
include = ["bicausal/**/*.py", "README.md", "LICENSE"]
exclude = ["bicausal/datasets"]
